test/tests/stages/8_loops/valid/extra_credit/compound_assignment_controlling_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(100)
  ;
  int
  identifier(sum)
  =
  const int(0)
  ;
  do
  identifier(sum)
  +=
  const int(2)
  ;
  while
  (
  identifier(i)
  -=
  const int(1)
  )
  ;
  return
  (
  identifier(i)
  ==
  const int(0)
  &&
  identifier(sum)
  ==
  const int(200)
  )
  ;
  }
