test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_label_in_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  do
  {
  identifier(lbl)
  :
  return
  const int(1)
  ;
  identifier(lbl)
  :
  return
  const int(2)
  ;
  }
  while
  (
  const int(1)
  )
  ;
  return
  const int(0)
  ;
  }
